# parametric

./: LICENSE  README.md  build.sh  meson.build
include/: animate.h  config.h  input.h  output.h  server.h  shell.h  view.h
src/: animate.c  config.c  input.c  main.c  output.c  server.c  shell.c  view.c
